test/expected/declare_lc8.out
declare x as long char8_t
        ^
9: error: "long char8_t" is illegal for built-in type
